styles.css
:root {
  --gutter: .5rem;
  --gutter-half: calc(.5rem/2);
  --text-tiny: .75rem;
  --text-small: .8rem;
  --text-medium: .9rem;
  --color-primary: #fff;
  --color-secondary: #ccc;
  --color-tertiary: #777;
  --color-bg-primary: #000;
  --color-bg-secondary: #1e1e1e;
  --color-bg-tertiary: #333;
  --color-border-secondary: #333;
  --color-border-active: #aaa; /* fc0 */
}

/* prevent flash of white content when navigating thumbnails */
html,
body {
  height: 100vh;
  overflow: hidden;
}

body {
  margin: 0;
}

.layout {
  display: grid;
  grid-template-rows: 70vh 30vh;
  height: 100vh;
}

/* prevent flash of white content when navigating thumbnails */
.layout,
.layout > * {
  overflow: hidden;
}

.images {
  overflow-y: auto;
  scroll-behavior: auto; /* instant */
  background-color: var(--color-bg-primary);
  padding-bottom: 2rem;
  border: var(--gutter) solid var(--color-bg-primary);
}

.image-list {
  display: grid;
  grid-template-columns: repeat(10, 1fr);
  gap: var(--gutter);
  list-style: none;
  padding: 0;
  margin: 0;
}

.image-list-item > .btn-img {
  display: grid;
  grid-template-rows: 1fr auto;
  align-items: start;
  background-color: var(--color-bg-secondary);
  height: 100%;
}

.images img {
  width: 100%;
  height: auto;
  filter: grayscale(60%) brightness(.5);
}

.images .btn-selected img {
  filter: none;
}

.image-meta {
  background-color: var(--color-bg-secondary);
  color: var(--color-tertiary);
  font-family: sans-serif;
  font-size: var(--text-tiny);
  padding: var(--gutter-half) var(--gutter);
  margin: .1rem 0;
}

.btn-selected .image-meta {
  color: var(--color-primary);
}


/* .img-container {
  max-height: none !important;
} */

.image-datetime {
  text-align: center;
}

.header {
  justify-content: center;
  background-color: var(--color-bg-primary);
  padding: var(--gutter-half) var(--gutter);
}

.image-summary {
  position: fixed;
  right: 0;
  bottom: 0;
  left: 0;
  text-align: right;
  border: var(--gutter) solid var(--color-bg-primary);
}

.image-summary.image-meta {
  background-color: var(--color-bg-secondary);
  color: var(--color-secondary);
  font-size: var(--text-small);
  margin: 0;
}

.btn {
  background-color: #333;
  color: var(--color-primary);
  font-family: sans-serif;
  font-size: var(--text-small);
  padding: var(--gutter-half);
  border: 1px solid var(--color-border-secondary);
  border-radius: 0;
  margin-right: 1px;
}

.btn-selected {
  position: relative;
}

.btn-selected::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: var(--gutter-half) solid var(--color-border-active);
  filter: drop-shadow(2px 4px 6px black;)
}

input.btn {
  padding-right: 0;
  padding-left: 0;
}

.actions {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  align: end;
}

label[for="rotate"] {
  border-right: 0;
  margin-right: -3px; /* inline block - 1px */
}

#rotate {
  width: 2rem;
  border-left: 0;
}

/* cropper */

img {
  display: block;
  max-width: 100%;
}

.img-container,
.img-preview {
  background-color: #f7f7f7;
  text-align: center;
  width: 100%;
}

.img-container {
  max-height: 497px;
  min-height: 200px;
}

@media (min-width: 768px) {
  .img-container {
    min-height: 497px;
  }
}

.img-container {
  background-color: var(--color-bg-tertiary); /* loading color */
}

.img-container > img {
  max-width: 100%;
  visibility: hidden; /* allows presumed dimension calculations without FOUC */
}

.btn-img {
  background-color: var(--color-bg-secondary);
  padding: 0;
  border: 0;
  margin: 0;
}

.btn-img:focus {
  outline: none;
}

.cropper-modal {
  opacity: .8; /* darker */
}

